exports[`no-conditional-in-test > invalid(1): import test from 'node:test';\ntest(\"a\", {fn() { if (c) { f(); } }}, {fn() {}}); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", {fn() { if (c) { f(); } }}, {fn() {}});

`;

exports[`no-conditional-in-test > invalid(1): import test from 'node:test';\ntest(\"a\", {fn() { if (c) { f(); } }}, {fn() {}}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("a", {fn() { if (c) { f(); } }}, {fn() {}});
    |                   ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(10): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { if (a) { setup(); } });

`;

exports[`no-conditional-in-test > invalid(10): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { if (a) { setup(); } });
    |                    ^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(11): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }, {timeout: 1000}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { if (a) { setup(); } }, {timeout: 1000});

`;

exports[`no-conditional-in-test > invalid(11): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { if (a) { setup(); } }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { if (a) { setup(); } }, {timeout: 1000});
    |                    ^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(12): import {before} from 'node:test';\nbefore(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import {before} from 'node:test';
  2 | before(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(12): import {before} from 'node:test';\nbefore(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import {before} from 'node:test';
> 2 | before(() => { if (a) { f(); } }, {timeout: 1});
    |                ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(13): import {after} from 'node:test';\nafter(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import {after} from 'node:test';
  2 | after(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(13): import {after} from 'node:test';\nafter(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import {after} from 'node:test';
> 2 | after(() => { if (a) { f(); } }, {timeout: 1});
    |               ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(14): import {afterEach} from 'node:test';\nafterEach(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import {afterEach} from 'node:test';
  2 | afterEach(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(14): import {afterEach} from 'node:test';\nafterEach(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import {afterEach} from 'node:test';
> 2 | afterEach(() => { if (a) { f(); } }, {timeout: 1});
    |                   ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(15): import test from 'node:test';\ntest.beforeEach(() => { if (a) { f(); } }, {timeout: 1}); 1`] = `

  1 | import test from 'node:test';
  2 | test.beforeEach(() => { if (a) { f(); } }, {timeout: 1});

`;

exports[`no-conditional-in-test > invalid(15): import test from 'node:test';\ntest.beforeEach(() => { if (a) { f(); } }, {timeout: 1}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.beforeEach(() => { if (a) { f(); } }, {timeout: 1});
    |                         ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(16): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000});

`;

exports[`no-conditional-in-test > invalid(16): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { const value = a ? 1 : 2; }, {timeout: 1000});
    |                                  ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(17): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000}); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000});

`;

exports[`no-conditional-in-test > invalid(17): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000}); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(() => { switch (a) { case 1: break; } }, {timeout: 1000});
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(18): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { test(\"x\", () => { if (a) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | describe("s", () => { test("x", () => { if (a) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(18): import {test, describe, beforeEach} from 'node:test';\ndescribe(\"s\", () => { test(\"x\", () => { if (a) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | describe("s", () => { test("x", () => { if (a) { f(); } }); });
    |                                         ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(19): import {it} from 'node:test';\nit(\"x\", () => { if (a) { f(); } }); 1`] = `

  1 | import {it} from 'node:test';
  2 | it("x", () => { if (a) { f(); } });

`;

exports[`no-conditional-in-test > invalid(19): import {it} from 'node:test';\nit(\"x\", () => { if (a) { f(); } }); 2`] = `

Message:
  1 | import {it} from 'node:test';
> 2 | it("x", () => { if (a) { f(); } });
    |                 ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(2): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { if (x) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", async t => { await t.test("b", () => { if (x) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(2): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { if (x) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", async t => { await t.test("b", () => { if (x) { f(); } }); });
    |                                                  ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(20): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => { if (a) { f(); } }); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.test("x", () => { if (a) { f(); } });

`;

exports[`no-conditional-in-test > invalid(20): import * as nodeTest from 'node:test';\nnodeTest.test(\"x\", () => { if (a) { f(); } }); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
> 2 | nodeTest.test("x", () => { if (a) { f(); } });
    |                            ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(21): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a as boolean) { f(); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { if (a as boolean) { f(); } });

`;

exports[`no-conditional-in-test > invalid(21): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a as boolean) { f(); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { if (a as boolean) { f(); } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(22): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.beforeEach(() => { if (a) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test('o', t => { t.beforeEach(() => { if (a) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(22): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.beforeEach(() => { if (a) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test('o', t => { t.beforeEach(() => { if (a) { f(); } }); });
    |                                       ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(23): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.before(() => { if (a) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test('o', t => { t.before(() => { if (a) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(23): import {test, describe, beforeEach} from 'node:test';\ntest('o', t => { t.before(() => { if (a) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test('o', t => { t.before(() => { if (a) { f(); } }); });
    |                                   ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(24): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(function live() { if (a) { f(); } }, function dead() { g(); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | beforeEach(function live() { if (a) { f(); } }, function dead() { g(); });

`;

exports[`no-conditional-in-test > invalid(24): import {test, describe, beforeEach} from 'node:test';\nbeforeEach(function live() { if (a) { f(); } }, function dead() { g(); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | beforeEach(function live() { if (a) { f(); } }, function dead() { g(); });
    |                              ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(25): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", function live() { if (a) { f(); } }, function dead() { g(); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", function live() { if (a) { f(); } }, function dead() { g(); });

`;

exports[`no-conditional-in-test > invalid(25): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", function live() { if (a) { f(); } }, function dead() { g(); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", function live() { if (a) { f(); } }, function dead() { g(); });
    |                             ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(3): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test.only(\"b\", () => { if (x) { f(); } }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", async t => { await t.test.only("b", () => { if (x) { f(); } }); });

`;

exports[`no-conditional-in-test > invalid(3): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test.only(\"b\", () => { if (x) { f(); } }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", async t => { await t.test.only("b", () => { if (x) { f(); } }); });
    |                                                       ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(4): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { const v = x ? 1 : 2; }); }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("a", async t => { await t.test("b", () => { const v = x ? 1 : 2; }); });

`;

exports[`no-conditional-in-test > invalid(4): import {test, describe, beforeEach} from 'node:test';\ntest(\"a\", async t => { await t.test(\"b\", () => { const v = x ? 1 : 2; }); }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("a", async t => { await t.test("b", () => { const v = x ? 1 : 2; }); });
    |                                                            ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(5): import test from 'node:test';\ntest({name: 'x', fn() { if (a) { f(); } }}); 1`] = `

  1 | import test from 'node:test';
  2 | test({name: 'x', fn() { if (a) { f(); } }});

`;

exports[`no-conditional-in-test > invalid(5): import test from 'node:test';\ntest({name: 'x', fn() { if (a) { f(); } }}); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test({name: 'x', fn() { if (a) { f(); } }});
    |                         ^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(6): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { assert.ok(b); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { if (a) { assert.ok(b); } });

`;

exports[`no-conditional-in-test > invalid(6): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { assert.ok(b); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { if (a) { assert.ok(b); } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(7): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { f(); } else { g(); } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { if (a) { f(); } else { g(); } });

`;

exports[`no-conditional-in-test > invalid(7): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { if (a) { f(); } else { g(); } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { if (a) { f(); } else { g(); } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(8): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { const value = a ? 1 : 2; }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { const value = a ? 1 : 2; });

`;

exports[`no-conditional-in-test > invalid(8): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { const value = a ? 1 : 2; }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { const value = a ? 1 : 2; });
    |                                 ^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;

exports[`no-conditional-in-test > invalid(9): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { switch (a) { case 1: break; } }); 1`] = `

  1 | import {test, describe, beforeEach} from 'node:test';
  2 | test("x", () => { switch (a) { case 1: break; } });

`;

exports[`no-conditional-in-test > invalid(9): import {test, describe, beforeEach} from 'node:test';\ntest(\"x\", () => { switch (a) { case 1: break; } }); 2`] = `

Message:
  1 | import {test, describe, beforeEach} from 'node:test';
> 2 | test("x", () => { switch (a) { case 1: break; } });
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Avoid conditional logic in a test; a test should run the same way every time.

`;
